Simple refactoring and code cleanup